[gd_scene load_steps=7 format=3 uid="uid://dyj8gp27ebnw4"]

[ext_resource type="Script" uid="uid://do33uu8hr1m5r" path="res://Scripts/Gameplay/Shared Scripts/Bullet Scripts/BULLET.gd" id="1_h60f1"]
[ext_resource type="PackedScene" uid="uid://dcta0op34obh3" path="res://Animations/Particles/BulletParticles.tscn" id="2_dopty"]
[ext_resource type="Texture2D" uid="uid://bnbh3khepfidd" path="res://Game Assets/Laser Sprites/18.png" id="3_cc56y"]
[ext_resource type="PackedScene" uid="uid://ncfc7h4rqc8n" path="res://Scenes/Gameplay/Components/attack_component.tscn" id="4_cc56y"]
[ext_resource type="Texture2D" uid="uid://cyrft2gche2pc" path="res://Game Assets/Lighting/light.png" id="5_beoe8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8m36q"]
radius = 2.0

[node name="sniper_bullet" type="Area2D"]
z_index = 1
script = ExtResource("1_h60f1")
speed = 1500.0
BulletParticle = ExtResource("2_dopty")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_cc56y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
scale = Vector2(3.8882, 1.18616)
shape = SubResource("CircleShape2D_8m36q")

[node name="AttackComponent" parent="." instance=ExtResource("4_cc56y")]
attack_damage = 100.0

[node name="BulletLight" type="PointLight2D" parent="." groups=["lighting"]]
position = Vector2(0, 4.76837e-07)
scale = Vector2(1, 0.3125)
texture = ExtResource("5_beoe8")
texture_scale = 0.05

[node name="SurroundingLight" type="PointLight2D" parent="." groups=["lighting"]]
energy = 0.1
texture = ExtResource("5_beoe8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
